--- a/WarehouseOptimiseGUI/pom.xml
+++ b/WarehouseOptimiseGUI/pom.xml
@@ -70,7 +70,7 @@
                         <id>default-cli</id>
                         <configuration>
                             <mainClass>
-                                com.example.warehouseoptimisegui/com.example.warehouseoptimisegui.HelloApplication
+                                com.example.warehouseoptimisegui/com.example.warehouseoptimisergui.HelloApplication
                             </mainClass>
                         </configuration>
                     </execution>
